Fixing non-wrapping text

--- a/styles.css
+++ b/styles.css
@@ -148,13 +148,13 @@ main {
     top: 3%;
 }
 
-#rules p {
+/* #rules p {
     position: absolute;
     float: left;
     width: 200px;
     top: 5%;
     margin-bottom: 5px;
-}
+} */
 
 #signup, #login, #logout {
     font: inherit; 
